force-app/main/default/objects/TestObject__c/fields/AutoNumber_Field__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber_Field__c</fullName>
    <label>AutoNumber Field</label>
    <type>AutoNumber</type>
</CustomField>