force-app/main/default/objects/TestObject__c/fields/NumberField__c.field-meta.xml
<CustomField>
    <fullName>NumberField__c</fullName>
    <label>NumberField</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>