force-app/main/default/objects/TestObject__c/fields/PicklistField__c.field-meta.xml
<CustomField>
    <fullName>PicklistField__c</fullName>
    <label>PicklistField</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>value1</fullName>
            </value>
            <value>
                <fullName>value2</fullName>
            </value>
            <value>
                <fullName>value3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>