force-app/main/default/objects/TestObject__c/fields/TestObjectParentLookup__c.field-meta.xml
<CustomField>
    <fullName>TestObjectParentLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the TestObjectParent</description>
    <label>TestObjectParentLookup</label>
    <referenceTo>TestObjectParent__c</referenceTo>
    <relationshipLabel>TestObjectsLookup</relationshipLabel>
    <relationshipName>TestObjects</relationshipName>
    <type>Lookup</type>
</CustomField>