force-app/main/default/objects/TestObject__c/fields/TestObjectParentMd__c.field-meta.xml
<CustomField>
    <fullName>TestObjectParentMd__c</fullName>
    <description>Master-detail to TestObject</description>
    <label>TestObjectParentMd</label>
    <referenceTo>TestObjectParent__c</referenceTo>
    <relationshipLabel>TestObjects (TestObjectParentMd)</relationshipLabel>
    <relationshipName>TestObjectsMd</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>