force-app/main/default/objects/TestObject__c/fields/TextAreaField__c.field-meta.xml
<CustomField>
    <fullName>TextAreaField__c</fullName>
    <label>TextAreaField</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>